# RSSISim

./: CMakeLists.txt  README.md  train_models.sh
code/path_loss/: path_loss.py
code/ray/: ray.py
config/: cross01_10_10.json  cross01_10_30.json  cross01_10_30_bn.json  cross01_10_30_bn_dp.json  cross01_10_30_dp.json  cross01_10_30_polar.json  cross01_2_5.json  cross01_30_10.json  cross01_30_30.json  cross01_5_5.json  cross01_base.json  omnet_10_10.json  omnet_10_30.json  omnet_10_30_bn.json  omnet_10_30_bn_dp.json  omnet_10_30_dp.json  omnet_10_30_polar.json  omnet_2_5.json  omnet_30_10.json  omnet_30_30.json  omnet_5_5.json  omnet_base.json
data/: data.csv  data_gw.txt  omnet00.csv  omnet_gw.txt  test-0617-less-final.csv  test-0617-wall-final.csv
include/: intersection.hpp  map.hpp  math_utils.hpp  ray.hpp  tracer.hpp
include/obstacle/: aabb.hpp  obstacle.hpp
include/path_loss/: ideal_ploss.hpp  isotropic_ploss.hpp  path_loss.hpp
models/: cross01_10_10.pth  cross01_10_30.pth  model_omnet_free_obst.pth  model_omnet_multi.pth  model_omnet_multi_longtrain_weighted.pth  model_omnet_multi_longtraining.pth  model_omnet_obst.pth  model_rssisim0.pth
scripts/: data_plotter.py  estimator_launch.py  evaluator.py  launcher.py  model.pth  model.py
scripts/lib/io_utils/: __init__.py  config_reader.py  data_reader.py
scripts/old/: estimator_launch.py  model.pth  model.py  model_plotter.py  omnet_preproc.py
src/: CMakeLists.txt  ray.cpp  tracer.cpp
src/obstacle/: aabb.cpp
tests/: CMakeLists.txt  test_cross00.cpp  test_intersection.cpp  test_raycasting.cpp
(+5 files in other folders)
